--- a/publication.html
+++ b/publication.html
@@ -123,7 +123,7 @@ Camperdown, NSW 2006</p>
     </ol>
     <h3>Journal papers (published or accepted)</h3>
     <ol>
-      <li> Romeo Ortega, Bowen Yi*, Slobodan N. Vukosavic, Kwanghee Nam and Jongwon Choi, A globally  exponentially stable position observer for interior permanent magnet synchronous motors, <em>Automatica</em>,  2020. (provisionally accepted)</li>
+      <li> Romeo Ortega, Bowen Yi*, Slobodan N. Vukosavic, Kwanghee Nam and Jongwon Choi, A globally  exponentially stable position observer for interior permanent magnet synchronous motors, <em>Automatica</em>,  2020. (to appear)</li>
       <li>Romeo Ortega, Bowen Yi and Jose Guadalupe Romero, Robustification of nonlinear control systems <em>vis-à-vis</em> actuator dynamics: An immersion and invariance approach, <em>Systems & Control Letters</em>, 2020. (accepted)</li>
       <li>Bowen Yi, Romeo Ortega, Ian R. Manchester and Houria Siguerdidjane, Path following of a class of underactated mechanical systems via immersion and invariance-based orbital stabilization, <em>International Journal of Robust and Nonlinear Control</em>, to appear, 2020.</li>
       <li>Bowen Yi, Romeo Ortega, and Weidong Zhang, Smooth, time-variant regulation of nonholonomic  systems via energy pumping-and-damping, <em>International Journal of Robust and Nonlinear Control</em>,  vol. 30, issue 16, pp. 6399–6413, 2020.</li>
