--- a/index.html
+++ b/index.html
@@ -155,17 +155,19 @@ Camperdown, NSW 2006</p>
       </ul>
 	  <p></p>
 </div> 
-	
 
-	
-<a href="https://clustrmaps.com/site/1bdsy"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=vQXuWikfOWCHs-VDFCJWVULbHsq38PWBBDmeLmTSBK4&cl=ffffff" /></a>		
+ <section>
+	 <br>
+	 <br>
+ </section>
 		
-		
+<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=170&t=n&d=vQXuWikfOWCHs-VDFCJWVULbHsq38PWBBDmeLmTSBK4&cmn=ed5e0e&cmo=1f9138'></script>		
     </section>
 	  
   </div>
-	  
 
     <script src="javascripts/scale.fix.js"></script>
+	
+
 </body>
 </html>
