--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <br>
         </div>
         <p><b>Contact:</b><br>
-Rost Street Building J04<br>
+Rose Street Building J04<br>
 The University of Sydney<br>
 Camperdown, NSW 2006</p>
         <p>Tel: +61 04 6761 1727</p>
