--- a/publication.html
+++ b/publication.html
@@ -107,7 +107,7 @@ The University of Sydney</p>
           <br>
         </div>
       <p><b>Contact:</b><br>
-Rost Street Building J04<br>
+Rose Street Building J04<br>
 The University of Sydney<br>
 Camperdown, NSW 2006</p>
     <p>Tel: +61 04 6761 1727</p>
