--- a/services.html
+++ b/services.html
@@ -118,7 +118,44 @@
       </header>
       <section>
 
-        <h2>Research </h2>
+        <h2>Professional Services</h2>
+        <p class="social-row2">Reviewer for <em>Mathematical Reviews</em> (since 2020) - the American Mathemtical Society</p>
+        <p class="social-row2">Tutor, System Dynamics and Control (AMME3500, Semester 1 2020) - School of Aerospace, Mechanical and Mechatronic Engineering, The University of Sydney</p>
+        <p class="social-row2">Teaching Assistant, Advanced Process Control (Fall 2015) - Department of Automation, Shanghai Jiao Tong University</p>
+        <p class="social-row2">Journal Reviewers</p>
+        <ul>
+          <li>Automatica</li>
+          <li>Systems &amp; Control Letters</li>
+          <li>European Journal of Control</li>
+          <li>International Journal of Robust and Nonlinear Control</li>
+          <li>International Journal of Adaptive Control and Signal Processing</li>
+          <li>International Journal of Control</li>
+          <li>IEEE Transactions on Industrial Electronics</li>
+          <li>IEEE Transactions on Vehicular Technology</li>
+          <li>IEEE Transactions on Neural Networks and Learning Systems</li>
+          <li>IEEE/ASME Transactions on Mechatronics</li>
+          <li>IEEE Robotics and Automation Letters</li>
+          <li>IEEE Control Systems Letters</li>
+          <li>IEEE Transactions on System, Man and Cybernetics: Systems</li>
+          <li>Journal of Vibration and Control</li>
+          <li>Ocean Engineering</li>
+          <li>ISA Transactions</li>
+          <li>Neurocomputing</li>
+          <li>Aircraft Engineering and Aerospace Technology</li>
+          <li>Recent Patents and Mechanical Engineering</li>
+        </ul>
+        <p>Conference Reviewer</p>
+        <ul>
+          <li>IEEE Conference on Decision and Control</li>
+          <li>American Control Conference</li>
+          <li>IEEE Conference on Control Technolgy and Application</li>
+          <li>Chinese Control Conference</li>
+          <li>IFAC World Congress</li>
+          <li>IFAC Symposium on Nonlinear Control Systems</li>
+        </ul>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
         <p>&nbsp;</p>
         <p>&nbsp;</p>
         <p>&nbsp;</p>
