--- a/index.html
+++ b/index.html
@@ -147,8 +147,9 @@ Camperdown, NSW 2006</p>
 
 <h3>Recent News</h3> 
 	  <ul>
+	    <li><strong>11 Dec 2020</strong> We propose a novel method to design reduced-order observers for nonlinear systems via contraction analysis and convex optimization. Our paper, collobrating with Ruigang Wang and Ian R. Manchester, has been submitted. Its preprint may be found at <a href="https://arxiv.org/abs/2012.06158">arXiv:2007.15224</a>.</li>
 	    <li><strong>20 Oct 2020</strong> Our paper, in which we propose the first provable globally convergent sensorless observer for IPMSMs, was accepted by <em>Automatica</em>.&nbsp;&nbsp;</li>
-	    <li><strong>13 Oct 2020</strong>&nbsp;One paper collaborated with R. Ortega and J.G. Romero was accepted by<em> Systems &amp; Control Letters</em>. [We pose and solve the problem of robustification of controller design where the actuator dynamics was usually neglected. ]</li>
+<li><strong>13 Oct 2020</strong>&nbsp;One paper collaborated with R. Ortega and J.G. Romero was accepted by<em> Systems &amp; Control Letters</em>. [We pose and solve the problem of robustification of controller design where the actuator dynamics was usually neglected. ]</li>
 <li><strong>6 Oct 2020</strong> One paper was sent to<em> International Journal of Control</em>, in collaboration with A. Bobtsov, R. Ortega, N. Nicolaev. [About adaptive observer design for LTV systems]</li>
 	    <li><strong>27 Sept 2020</strong> We submitted a paper to <em>American Control Conference</em> with Ruigang Wang and Ian R. Manchester. [Proposing a novel reduced-order constructive method via contraction analysis and convex optimisation]</li>
 	    <li><strong>10 Sept 2020</strong> Our paper, in collobration with R. Ortega, I.R. Manchester and H. Siguerdidjane, was accepted by <em>Int J of Robust and Nonlinear Contr</em>. [providing a new problem formulation of path following for mechanical systems by means of orbital stabilization]</li>
