--- a/publication.html
+++ b/publication.html
@@ -94,7 +94,7 @@
         <h3><a href="others">Others&nbsp;</a></h3>
         <b>Social</b><br>
       <div class="social-row">
-          <a href="mailto:ransom@ou.edu" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i><span class="social-row1"><a href="mailto:B.YI@outlook.com" class="author-social" target="_blank">Email</a><br>
+        <a href="mailto:ransom@ou.edu" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i><span class="social-row1"><a href="mailto:B.YI@outlook.com" class="author-social" target="_blank">Email</a><br>
           <a href="https://scholar.google.com/citations?user=hyLNHhsAAAAJ&hl=en&oi=ao" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i></a><a href="https://orcid.org/0000-0002-0517-9519">ORCID</a><br>
           <a href="https://orcid.org/0000-0002-0517-9519"><i class="ai ai-fw ai-orcid-square"></i></a><a href="https://scholar.google.com/citations?user=hyLNHhsAAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a><br>
           <a href="https://www.researchgate.net/profile/Bowen_Yi"><i class="fa fa-fw fa-share-alt-square"></i>Researchgate</a><br>
@@ -129,7 +129,7 @@
             time-varying parameters, submitted to <em>International Journal of
               Control</em>, 2020. (under review)</li>
           <li>&nbsp;Bowen Yi, Ruigang Wang and Ian R. Manchester, Reduced-order
-            nonlinear observers vai contraction analysis and convex
+            nonlinear observers via contraction analysis and convex
             optimization, submitted to <em>IEEE Trans. Automatic Control</em>.
             (under review, <a href="https://arxiv.org/abs/2012.06158">arXiv:
               2012.06158</a>)</li>
