--- a/publication.html
+++ b/publication.html
@@ -115,10 +115,6 @@
               class="octicon octicon-link"></span></a> Selected Pulications</h2>
         <h3>Preprints and submissions</h3>
         <ol>
-          <li>Bowen Yi, Ruigang Wang, and Ian R. Manchester, Reduced-order
-            observers for nonlinear systems via contraction analysis and convex
-            optimisation, submitted to <em>American Control Conference</em>,
-            2021. (under review)</li>
           <li>Bowen Yi, and Romeo Ortega, Conditions for convergence of dynamics
             extension and mixing parameter estimator using LTI filters,
             submitted to <em>IEEE Trans. Automatic Control</em>, 2020. (under
@@ -128,11 +124,14 @@
             Adaptive state estimation of stateaffine systems with unknown
             time-varying parameters, submitted to <em>International Journal of
               Control</em>, 2020. (under review)</li>
-          <li>&nbsp;Bowen Yi, Ruigang Wang and Ian R. Manchester, Reduced-order
+          <li>Bowen Yi, Ruigang Wang and Ian R. Manchester, Reduced-order
             nonlinear observers via contraction analysis and convex
             optimization, submitted to <em>IEEE Trans. Automatic Control</em>.
             (under review, <a href="https://arxiv.org/abs/2012.06158">arXiv:
               2012.06158</a>)</li>
+          <li>Xiaodong Shao, Qinglei Hu, Yang Shi and Bowen Yi, Data-driven immersion and invariance adaptive
+          attitude control for rigid bodies with double-level state constraints, submitted to
+          <em>IEEE Trans. Control Systems Technology</em>, 2020. (minor revision)</li>
         </ol>
         <h3>Journal papers (published or accepted)</h3>
         <ol>
@@ -194,41 +193,43 @@
         </ol>
         <h3>Conference papers</h3>
         <ol>
+          <li>Bowen Yi, Ruigang Wang, and Ian R. Manchester, Reduced-order
+            observers for nonlinear systems via contraction analysis and convex
+            optimisation, <em>American Control Conference</em>, New Orleans, US, May 25-28, 2021. (to appear)</li>
           <li>Bowen Yi, Ruigang Wang and Ian R. Manchester, On necessary
             conditions of tracking control for nonlinear systems via contraction
             analysis, the 59th <em>IEEE Conference on Decision and Control</em>,
-            (IEEE CDC), Jeju Island, Republic of Korea, (virtual conference),
-            December 8-11, 2020. arXiv:2009.08662</li>
+            (IEEE CDC), Jeju Island, Republic of Korea, (virtual conference), Jeju Island, Republic of Korea, December 8-11, 2020. arXiv:2009.08662</li>
           <li>Bowen Yi, Romeo Ortega, Dongjun Wu and Weidong Zhang, Two
             constructive solutions to orbital stabilization of nonlinear systems
             via passivity-based control<em>, IEEE Conference on Decision and Con
-              trol</em>, (IEEE CDC), Nice, France, pp. 2027{2032, December
+              trol</em>, (IEEE CDC), Nice, France, pp. 2027--2032, December
             11-13, 2019.</li>
           <li>Bowen Yi, Romeo Ortega, andWeidong Zhang, Regulation of
             nonholonomic systems: A smooth, time- invariant approach, vol 52,
             issue 16, pp. 150-155, 2019. (presented at the Joint 8th<em> IFAC
               Symposium on Mechatronic Systems and 11th IFAC Symposium on
               Nonlinear Control Systems</em>, (Joint Mechatronics 2019 &amp;
-            NolCoS 2019), Vienna, Austria, pp. 212{217, September 4-6, 2019.)<br>
+            NolCoS 2019), Vienna, Austria, pp. 212--217, September 4-6, 2019.)<br>
           </li>
           <li>Bowen Yi, Slobodan N. Vukosavic, Romeo Ortega, Aleksandar M.
             Stankovic and Weidong Zhang, A frequency domain interpretation of
             signal injection methods for salient PMSMs,<em> IEEE Conference on
               Control Technology and Applications</em>, (IEEE CCTA), Hong Kong,
-            China, pp. 517{522, August 19-21, 2019.&nbsp; (<em><strong>Student
+            China, pp. 517--522, August 19-21, 2019.&nbsp; (<em><strong>Student
                 Best Paper Award</strong></em> from IEEE Control Systems
             Society) </li>
           <li>&nbsp;Bowen Yi, Romeo Ortega, Houria Siguerdidjane and Weidong
             Zhang, An adaptive observer for sen- sorless control of the
             levitated ball using signal injection, <em>IEEE Conference on
               Decision and Control</em>, (IEEE CDC), Miami Beach, FL, USA, pp.
-            6882-6887, December 17{19, 2018. (See also arXiv:1804.02697 for an
+            6882-6887, December 17-19, 2018. (See also arXiv:1804.02697 for an
             extended version.)</li>
           <li>&nbsp;Daniele Zonetti, Bowen Yi, Stanislav Aranovskiy, Denis E
             mov, Romeo Ortega and Enrique Garcia- Quismondo, On physical
             modeling of Lithium-Ion cells and adaptive estimation of their
             state-of-charge,<em> IEEE Conference on Decision and Control</em>,
-            (IEEE CDC), Miami Beach, FL, USA, pp. 2176{2181, December 17-19,
+            (IEEE CDC), Miami Beach, FL, USA, pp. 2176--2181, December 17-19,
             2018.</li>
         </ol>
         <hr>
