--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <a href="https://www.sydney.edu.au/engineering/our-research/robotics-and-intelligent-systems/australian-centre-for-field-robotics.html">Australian Centre for Field Robotics</a> (ACFR)</p>
     <h3><a href="https://bwyi.github.io/">Home</a></h3>
         <h3><a href="research.html">Research</a> </h3>
-        <h3><a href="publication.html">Publications</a></h3> 
+        <h3><a href="publication.html">Publications</a></h3>
         <h3><a href="services.html">Services</a></h3>
 <h3><a href="slides.html">Slides</a></h3>
 <h3><a href="others.html">Others</a></h3><div class="social-row3">
@@ -141,12 +141,14 @@ Camperdown, NSW 2006</p>
       <p>My research interests include nonlinear and adaptive control, observer design, system identification, with special emphasis on applications to robotics.</p>
       <p>Dr. Yi received the IEEE Conference on Control Technology and Applications (CCTA) <a href="http://ieeecss.org/awards/conference-control-technology-and-applications-best-student-paper-award">Best Student Paper Award</a> from IEEE Control Systems Society for his work on sensorless observer design for IPMSMs in 2019.      </p>
       <h2>&nbsp;</h2>
-     
+
 
 <div style="border:1px solid #7aabf5; width:500px; background-color: #F1F1F1; padding: 10px;">
 
-<h3>Recent News</h3> 
+<h3>Recent News</h3>
 	  <ul>
+      <li><strong>25 March 2021</strong> Our paper (with Ian R. Manchester), On the equivalence of contraction and Koopman approaches for nonlinear stability and control, was submitted to <em>IEEE Conferece on Decision and Control</em>. </li>
+      <li><strong>24 March 2021</strong> We sent our paper, A globally convergent observer for visual localization and mapping without persistent excitation, to <em>IEEE Conferece on Decision and Control</em>. In this paper, we propose a novel and simple visual SLAM observer requiring quite weak excitation conditions. It was collaborated with Chi Jin, Lei Wang, Gudong Shi and Ian R. Manchester.</li>
 	    <li><strong>23 Jan 2021</strong> Our paper, Reduced-order observers for nonlinear systems via contraction analysis and convex optimisation, in collaboration with Ian R. Manchester and Ruigang Wang, was accepted by 2021 <em>American Control Conference</em>. </li>
 	    <li><strong>11 Dec 2020</strong> We propose a novel method to design reduced-order observers for nonlinear systems via contraction analysis and convex optimization. Our paper, collobrating with Ruigang Wang and Ian R. Manchester, has been submitted. Its preprint may be found at <a href="https://arxiv.org/abs/2012.06158">arXiv:2007.15224</a>.</li>
 	    <li><strong>20 Oct 2020</strong> Our paper, in which we propose the first provable globally convergent sensorless observer for IPMSMs, was accepted by <em>Automatica</em>.&nbsp;&nbsp;</li>
@@ -156,20 +158,20 @@ Camperdown, NSW 2006</p>
 	    <li><strong>10 Sept 2020</strong> Our paper, in collobration with R. Ortega, I.R. Manchester and H. Siguerdidjane, was accepted by <em>Int J of Robust and Nonlinear Contr</em>. [providing a new problem formulation of path following for mechanical systems by means of orbital stabilization]</li>
       </ul>
 	  <p></p>
-</div> 
+</div>
 
  <section>
 	 <br>
 	 <br>
  </section>
-		
-<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=170&t=n&d=vQXuWikfOWCHs-VDFCJWVULbHsq38PWBBDmeLmTSBK4&cmn=ed5e0e&cmo=1f9138'></script>		
+
+<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=170&t=n&d=vQXuWikfOWCHs-VDFCJWVULbHsq38PWBBDmeLmTSBK4&cmn=ed5e0e&cmo=1f9138'></script>
     </section>
-	  
+
   </div>
 
     <script src="javascripts/scale.fix.js"></script>
-	
+
 
 </body>
 </html>
