--- a/publication.html
+++ b/publication.html
@@ -115,6 +115,8 @@
               class="octicon octicon-link"></span></a> Selected Pulications</h2>
         <h3>Preprints and submissions</h3>
         <ol>
+          <li>Bowen Yi, and Ian R. Manchester, On the equivalence of contraction and Koopman approaches for nonlinear stability and control, <em>IEEE Conference on Decision and Control</em>, 2021. (under review)</li>
+          <li>Bowen Yi, Chi Jin, Lei Wang, Guodong Shi, and Ian R. Manchester, A globally convergent observer for visual localization without persisent excitation, <em>IEEE Conference on Decision and Control</em>, 2021. (under review)</li>
           <li>Bowen Yi, and Romeo Ortega, Conditions for convergence of dynamics
             extension and mixing parameter estimator using LTI filters,
             submitted to <em>IEEE Trans. Automatic Control</em>, 2020. (under
