--- a/publication.html
+++ b/publication.html
@@ -122,21 +122,23 @@
             submitted to <em>IEEE Trans. Automatic Control</em>, 2020. (under
             review,&nbsp; <a href="https://arxiv.org/abs/2007.15224">arXiv:
               2007.15224</a>)</li>
-          <li>Alexey Bobtsov, Romeo Ortega, Bowen Yi, and Nicolay Nicolaev,
-            Adaptive state estimation of stateaffine systems with unknown
-            time-varying parameters, submitted to <em>International Journal of
-              Control</em>, 2020. (under review)</li>
           <li>Bowen Yi, Ruigang Wang and Ian R. Manchester, Reduced-order
             nonlinear observers via contraction analysis and convex
             optimization, submitted to <em>IEEE Trans. Automatic Control</em>.
             (under review, <a href="https://arxiv.org/abs/2012.06158">arXiv:
               2012.06158</a>)</li>
+          <li>Alexey Bobtsov, Bowen Yi, Romeo Ortega and Alessandro Astolfi, Generation of new exciting regressors for consistent on-line estimation of a scalar parameter, submitted to <em>IEEE Trans. Automatic Control</em>.
+                (under review)</li>
           <li>Xiaodong Shao, Qinglei Hu, Yang Shi and Bowen Yi, Data-driven immersion and invariance adaptive
           attitude control for rigid bodies with double-level state constraints, submitted to
           <em>IEEE Trans. Control Systems Technology</em>, 2020. (minor revision)</li>
         </ol>
         <h3>Journal papers (published or accepted)</h3>
         <ol>
+          <li>Alexey Bobtsov, Romeo Ortega, Bowen Yi, and Nicolay Nicolaev,
+            Adaptive state estimation of stateaffine systems with unknown
+            time-varying parameters, <em>International Journal of
+              Control</em>, 2021. (accpeted)</li>
           <li> Romeo Ortega, Bowen Yi*, Slobodan N. Vukosavic, Kwanghee Nam and
             Jongwon Choi, A globally exponentially stable position observer for
             interior permanent magnet synchronous motors, <em>Automatica</em>,
@@ -144,7 +146,7 @@
           <li>Romeo Ortega, Bowen Yi and Jose Guadalupe Romero, Robustification
             of nonlinear control systems <em>vis-à-vis</em> actuator dynamics:
             An immersion and invariance approach, <em>Systems &amp; Control
-              Letters</em>, 2020. (accepted)</li>
+              Letters</em>, vol. 146, 104811, pp. 1{9, 2020.</li>
           <li>Bowen Yi, Romeo Ortega, Ian R. Manchester and Houria
             Siguerdidjane, Path following of a class of underactated mechanical
             systems via immersion and invariance-based orbital stabilization, <em>International
