--- a/publication.html
+++ b/publication.html
@@ -115,8 +115,8 @@
               class="octicon octicon-link"></span></a> Selected Pulications</h2>
         <h3>Preprints and submissions</h3>
         <ol>
-          <li>Bowen Yi, and Ian R. Manchester, On the equivalence of contraction and Koopman approaches for nonlinear stability and control, <em>IEEE Conference on Decision and Control</em>, 2021. (under review)</li>
-          <li>Bowen Yi, Chi Jin, Lei Wang, Guodong Shi, and Ian R. Manchester, A globally convergent observer for visual localization without persisent excitation, <em>IEEE Conference on Decision and Control</em>, 2021. (under review)</li>
+          <li>Bowen Yi, and Ian R. Manchester, On the equivalence of contraction and Koopman approaches for nonlinear stability and control, submitted to <em>IEEE Trans. Automatic Control</em>, 2021. (under review)</li>
+          <li>Bowen Yi, Chi Jin, Lei Wang, Guodong Shi, and Ian R. Manchester, A globally convergent observer for visual localization without persisent excitation, submitted to <em>IEEE Conference on Decision and Control</em>, 2021. (under review)</li>
           <li>Bowen Yi, and Romeo Ortega, Conditions for convergence of dynamics
             extension and mixing parameter estimator using LTI filters,
             submitted to <em>IEEE Trans. Automatic Control</em>, 2020. (under
@@ -127,18 +127,18 @@
             optimization, submitted to <em>IEEE Trans. Automatic Control</em>.
             (under review, <a href="https://arxiv.org/abs/2012.06158">arXiv:
               2012.06158</a>)</li>
-          <li>Alexey Bobtsov, Bowen Yi, Romeo Ortega and Alessandro Astolfi, Generation of new exciting regressors for consistent on-line estimation of a scalar parameter, submitted to <em>IEEE Trans. Automatic Control</em>.
+          <li>Alexey Bobtsov, Bowen Yi, Romeo Ortega and Alessandro Astolfi, Generation of new exciting regressors for consistent on-line estimation of a scalar parameter, submitted to <em>IEEE Trans. Automatic Control, </em>2021.
                 (under review)</li>
-          <li>Xiaodong Shao, Qinglei Hu, Yang Shi and Bowen Yi, Data-driven immersion and invariance adaptive
-          attitude control for rigid bodies with double-level state constraints, submitted to
-          <em>IEEE Trans. Control Systems Technology</em>, 2020. (minor revision)</li>
+          <li>Bowen Yi, and Ian R. Manchester, On the equivalence of contraction and Koopman approaches for nonlinear stability and control, <em>IEEE Conference on Decision and Control</em>, 2021. (under review)</li>
         </ol>
         <h3>Journal papers (published or accepted)</h3>
         <ol>
+          <li>Xiaodong Shao, Qinglei Hu, Yang Shi and Bowen Yi, Data-driven immersion and invariance adaptive
+          attitude control for rigid bodies with double-level state constraints, <em>IEEE Trans. Control Systems Technology</em>, 2021. (online)</li>
           <li>Alexey Bobtsov, Romeo Ortega, Bowen Yi, and Nicolay Nicolaev,
             Adaptive state estimation of stateaffine systems with unknown
             time-varying parameters, <em>International Journal of
-              Control</em>, 2021. (accpeted)</li>
+              Control</em>, 2021. (online)</li>
           <li> Romeo Ortega, Bowen Yi*, Slobodan N. Vukosavic, Kwanghee Nam and
             Jongwon Choi, A globally exponentially stable position observer for
             interior permanent magnet synchronous motors, <em>Automatica</em>,
