--- a/index.html
+++ b/index.html
@@ -147,14 +147,14 @@ Camperdown, NSW 2006</p>
 
 <h3>Recent News</h3>
 	  <ul>
-      <li><strong>25 March 2021</strong> Our paper (with Ian R. Manchester), On the equivalence of contraction and Koopman approaches for nonlinear stability and control, was submitted to <em>IEEE Conferece on Decision and Control</em>. </li>
-      <li><strong>24 March 2021</strong> We sent our paper, A globally convergent observer for visual localization and mapping without persistent excitation, to <em>IEEE Conferece on Decision and Control</em>. In this paper, we propose a novel and simple visual SLAM observer requiring quite weak excitation conditions. It was collaborated with Chi Jin, Lei Wang, Gudong Shi and Ian R. Manchester.</li>
-	    <li><strong>23 Jan 2021</strong> Our paper, Reduced-order observers for nonlinear systems via contraction analysis and convex optimisation, in collaboration with Ian R. Manchester and Ruigang Wang, was accepted by 2021 <em>American Control Conference</em>. </li>
+      <li><strong>27 July 2021</strong> Our paper, entitled On the equivalence of contraction and Koopman approaches for nonlinear stability and control, has been accepted by the 60th <em>IEEE Conferece on Decision and Control</em>.</li>
+      <li><strong>27 July 2021</strong> Our paper, entitled A globally convergent observer for visual localization and mapping without persistent excitation, has been accepted by the 60th <em>IEEE Conferece on Decision and Control</em>. </li>
+      <li><strong>27 April 2021</strong> Our paper, entitled Data-driven immersion and invariance adaptive attitude control for rigid bodies with double-level state constraints, has been accepted at <em>IEEE Trans. on Control Systems Technology</em>.</li>
+      <li><strong>30 March  2021</strong> Our paper, entitled Adaptive state estimation of state-affine systems with unknown time-varying parameters, has been accepted by <em>International Journal of Control.</em></li>
+	    <li><strong>23 Jan 2021</strong> Our paper, enetitled Reduced-order observers for nonlinear systems via contraction analysis and convex optimisation, has been accepted  by 2021 <em>American Control Conference</em>. </li>
 	    <li><strong>11 Dec 2020</strong> We propose a novel method to design reduced-order observers for nonlinear systems via contraction analysis and convex optimization. Our paper, collobrating with Ruigang Wang and Ian R. Manchester, has been submitted. Its preprint may be found at <a href="https://arxiv.org/abs/2012.06158">arXiv:2007.15224</a>.</li>
-	    <li><strong>20 Oct 2020</strong> Our paper, in which we propose the first provable globally convergent sensorless observer for IPMSMs, was accepted by <em>Automatica</em>.&nbsp;&nbsp;</li>
+	    <li><strong>20 Oct 2020</strong> Our paper, in which we propose the first provable globally convergent sensorless observer for IPMSMs, was accepted by <em>Automatica</em>.</li>
 <li><strong>13 Oct 2020</strong>&nbsp;One paper collaborated with R. Ortega and J.G. Romero was accepted by<em> Systems &amp; Control Letters</em>. [We pose and solve the problem of robustification of controller design where the actuator dynamics was usually neglected. ]</li>
-<li><strong>6 Oct 2020</strong> One paper was sent to<em> International Journal of Control</em>, in collaboration with A. Bobtsov, R. Ortega, N. Nicolaev. [About adaptive observer design for LTV systems]</li>
-	    <li><strong>27 Sept 2020</strong> We submitted a paper to <em>American Control Conference</em> with Ruigang Wang and Ian R. Manchester. [Proposing a novel reduced-order constructive method via contraction analysis and convex optimisation]</li>
 	    <li><strong>10 Sept 2020</strong> Our paper, in collobration with R. Ortega, I.R. Manchester and H. Siguerdidjane, was accepted by <em>Int J of Robust and Nonlinear Contr</em>. [providing a new problem formulation of path following for mechanical systems by means of orbital stabilization]</li>
       </ul>
 	  <p></p>
