--- a/publication.html
+++ b/publication.html
@@ -116,7 +116,6 @@
         <h3>Preprints and submissions</h3>
         <ol>
           <li>Bowen Yi, and Ian R. Manchester, On the equivalence of contraction and Koopman approaches for nonlinear stability and control, submitted to <em>IEEE Trans. Automatic Control</em>, 2021. (under review)</li>
-          <li>Bowen Yi, Chi Jin, Lei Wang, Guodong Shi, and Ian R. Manchester, A globally convergent observer for visual localization without persisent excitation, submitted to <em>IEEE Conference on Decision and Control</em>, 2021. (under review)</li>
           <li>Bowen Yi, and Romeo Ortega, Conditions for convergence of dynamics
             extension and mixing parameter estimator using LTI filters,
             submitted to <em>IEEE Trans. Automatic Control</em>, 2020. (under
@@ -129,7 +128,6 @@
               2012.06158</a>)</li>
           <li>Alexey Bobtsov, Bowen Yi, Romeo Ortega and Alessandro Astolfi, Generation of new exciting regressors for consistent on-line estimation of a scalar parameter, submitted to <em>IEEE Trans. Automatic Control, </em>2021.
                 (under review)</li>
-          <li>Bowen Yi, and Ian R. Manchester, On the equivalence of contraction and Koopman approaches for nonlinear stability and control, <em>IEEE Conference on Decision and Control</em>, 2021. (under review)</li>
         </ol>
         <h3>Journal papers (published or accepted)</h3>
         <ol>
@@ -197,6 +195,8 @@
         </ol>
         <h3>Conference papers</h3>
         <ol>
+          <li>Bowen Yi, Chi Jin, Lei Wang, Guodong Shi, and Ian R. Manchester, A globally convergent observer for visual localization without persisent excitation, Austin, Texas, USA, <em>IEEE Conference on Decision and Control</em>, 2021.</li>
+          <li>Bowen Yi, and Ian R. Manchester, On the equivalence of contraction and Koopman approaches for nonlinear stability and control, Austin, Texas, USA, <em>IEEE Conference on Decision and Control</em>, 2021. </li>
           <li>Bowen Yi, Ruigang Wang, and Ian R. Manchester, Reduced-order
             observers for nonlinear systems via contraction analysis and convex
             optimisation, <em>American Control Conference</em>, New Orleans, US, May 25-28, 2021. (to appear)</li>
@@ -241,6 +241,11 @@
 
               class="octicon octicon-link"></span></a>Talks and Presentations</h2>
         <ol>
+          <li> Reduced-order observers for nonlinear systems via contraction analysis and convex optimization, ACC, New Orleans, LA, US, May 28, 2021. (online)</li>
+          <li>State estimation of nonlinear systems: Contraction analysis and convex optimization, Huzhou Institute, Zhejiang University, Huzhou, China, May 22, 2021. (online)</li>
+          <li>An almost globally convergent observer for visual SLAM without persistent excitation, Australian Centre for Field Robotics (ACFR), The University of Sydney, Sydney, Australia, April 22, 2021.</li>
+          <li>On necessary conditions of tracking control for nonlinear systems via contraction analysis, IEEE CDC (Nonlinear Contraction Session), Jeju, Republic of Korea, Dec 15, 2020. (online)</li>
+          <li>System identification and state estimation of nonlinear control systems, Beijing ZHZ Co., Ltd., Sept 20, 2020. (online)</li>
           <li>Path following of underactuated mechanical systems: An energy
             perspective, Australian Centre for Field Robotics (ACFR), The
             University of Sydney, Sydney, Australia, July 2, 2020.</li>
