--- a/publication.html
+++ b/publication.html
@@ -128,11 +128,13 @@
               2012.06158</a>)</li>
           <li>Alexey Bobtsov, Bowen Yi, Romeo Ortega and Alessandro Astolfi, Generation of new exciting regressors for consistent on-line estimation of a scalar parameter, submitted to <em>IEEE Trans. Automatic Control, </em>2021.
                 (under review)</li>
+          <li>Lei Wang, Romeo Ortega, Alexey Bobtsov, Jose G. Romero and Bowen Yi, Identiability implies robust, globally exponentially convergent on-line parameter estimation: Application to model reference adaptive control, submitted to <em>IEEE Trans. Automatic Control</em>, 2021. (under review)</li>
         </ol>
         <h3>Journal papers (published or accepted)</h3>
         <ol>
           <li>Xiaodong Shao, Qinglei Hu, Yang Shi and Bowen Yi, Data-driven immersion and invariance adaptive
           attitude control for rigid bodies with double-level state constraints, <em>IEEE Trans. Control Systems Technology</em>, 2021. (online)</li>
+          <li>Jin Wu, Miaomiao Wang, Yi Jiang, Bowen Yi, Rui Fan and Ming Liu, Simultaneous Hand-Eye/Robot-World/Camera-IMU Calibration, <em>IEEE/AMSE Trans. on Mechatronics</em>, 2021. (online)</li>
           <li>Alexey Bobtsov, Romeo Ortega, Bowen Yi, and Nicolay Nicolaev,
             Adaptive state estimation of stateaffine systems with unknown
             time-varying parameters, <em>International Journal of
@@ -140,7 +142,7 @@
           <li> Romeo Ortega, Bowen Yi*, Slobodan N. Vukosavic, Kwanghee Nam and
             Jongwon Choi, A globally exponentially stable position observer for
             interior permanent magnet synchronous motors, <em>Automatica</em>,
-            2020. (to appear)</li>
+            vol. 125, 109424, pp. 1-10, 2021.</li>
           <li>Romeo Ortega, Bowen Yi and Jose Guadalupe Romero, Robustification
             of nonlinear control systems <em>vis-à-vis</em> actuator dynamics:
             An immersion and invariance approach, <em>Systems &amp; Control
@@ -148,7 +150,7 @@
           <li>Bowen Yi, Romeo Ortega, Ian R. Manchester and Houria
             Siguerdidjane, Path following of a class of underactated mechanical
             systems via immersion and invariance-based orbital stabilization, <em>International
-              Journal of Robust and Nonlinear Control</em>, to appear, 2020.</li>
+              Journal of Robust and Nonlinear Control</em>, vol. 30, no. 18, pp. 8521-8544, 2020..</li>
           <li>Bowen Yi, Romeo Ortega, and Weidong Zhang, Smooth, time-variant
             regulation of nonholonomic systems via energy pumping-and-damping, <em>International
               Journal of Robust and Nonlinear Control</em>, vol. 30, issue 16,
