--- a/publication.html
+++ b/publication.html
@@ -129,6 +129,7 @@
           <li>Alexey Bobtsov, Bowen Yi, Romeo Ortega and Alessandro Astolfi, Generation of new exciting regressors for consistent on-line estimation of a scalar parameter, submitted to <em>IEEE Trans. Automatic Control, </em>2021.
                 (under review)</li>
           <li>Lei Wang, Romeo Ortega, Alexey Bobtsov, Jose G. Romero and Bowen Yi, Identiability implies robust, globally exponentially convergent on-line parameter estimation: Application to model reference adaptive control, submitted to <em>IEEE Trans. Automatic Control</em>, 2021. (under review)</li>
+          <li>Xiaodong Shao, Qinglei Hu, Daochun Li, Yang Shi and Bowen Yi, Composite adaptive control for anti-unwindng attitude maneuvers: An exponential stability result without persistent excitation, <em>IEEE Trans. Control Systems and Technology,</em> 2021. (under review)</li>
         </ol>
         <h3>Journal papers (published or accepted)</h3>
         <ol>
