--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@ Camperdown, NSW 2006</p>
 
 <h3>Recent News</h3>
 	  <ul>
+      <li><strong>18 Sept 2021</strong> Our paper, entitled Reduced-order nonlinear observers via contraction analysis and convex optimization, has been accepted by<em> IEEE Trans. on Automatic Control</em> as a Full paper.</li>
       <li><strong>27 July 2021</strong> Our paper, entitled On the equivalence of contraction and Koopman approaches for nonlinear stability and control, has been accepted by the 60th <em>IEEE Conferece on Decision and Control</em>.</li>
       <li><strong>27 July 2021</strong> Our paper, entitled A globally convergent observer for visual localization and mapping without persistent excitation, has been accepted by the 60th <em>IEEE Conferece on Decision and Control</em>. </li>
       <li><strong>27 April 2021</strong> Our paper, entitled Data-driven immersion and invariance adaptive attitude control for rigid bodies with double-level state constraints, has been accepted at <em>IEEE Trans. on Control Systems Technology</em>.</li>
