--- a/publication.html
+++ b/publication.html
@@ -115,18 +115,19 @@
               class="octicon octicon-link"></span></a> Selected Pulications</h2>
         <h3>Preprints and submissions</h3>
         <ol>
-          <li><u>Bowen Yi</u>, and Ian R. Manchester, On the equivalence of contraction and Koopman approaches for nonlinear stability and control, submitted to <em>IEEE Trans. on Automatic Control</em>, 2021. (under review)</li>
+          <li><u>Bowen Yi</u>, and Ian R. Manchester, On the equivalence of contraction and Koopman approaches for nonlinear stability and control, submitted to <em>IEEE Trans. on Automatic Control</em>, 2021. (under review, <a href="https://arxiv.org/abs/2103.15033">arXiv: 2103.15033</a>)</li>
           <li><u>Bowen Yi</u>, and Romeo Ortega, Conditions for convergence of dynamics
             extension and mixing parameter estimator using LTI filters,
             submitted to <em>IEEE Trans. on Automatic Control</em>, 2020. (under
-            review,&nbsp; <a href="https://arxiv.org/abs/2007.15224">arXiv:
+            review, <a href="https://arxiv.org/abs/2007.15224">arXiv:
               2007.15224</a>)</li>
           <li>Alexey Bobtsov, <u>Bowen Yi</u>*, Romeo Ortega and Alessandro Astolfi, Generation of new exciting regressors for consistent on-line estimation of a scalar parameter, submitted to <em>IEEE Trans. on Automatic Control, </em>2021.
-                (under review)</li>
+                (under review, <a href="https://arxiv.org/abs/2104.02210">arXiv: 2104.02210</a>)</li>
           <li>Jose G. Romero and <u>Bowen Yi</u>*, Orbital stabilization of underactuated mechanical systems without 
-          Euler-Lagrange structure after of a collocated pre-feedback, submitted to <em>IEEE Trans. on Automatic Control</em>, 2021. (under review)</li>
-          <li>Lei Wang, Romeo Ortega, Alexey Bobtsov, Jose G. Romero and <u>Bowen Yi</u> Identiability implies robust, globally exponentially convergent on-line parameter estimation: Application to model reference adaptive control, submitted to <em>IEEE Trans. on Automatic Control</em>, 2021. (under review)</li>
-          <li>Xiaodong Shao, Qinglei Hu, Daochun Li, Yang Shi and <u>Bowen Yi</u>, Composite adaptive control for anti-unwindng attitude maneuvers: An exponential stability result without persistent excitation, <em>IEEE Trans. on Control Systems and Technology,</em> 2021. (under review)</li>
+          Euler-Lagrange structure after of a collocated pre-feedback, submitted to <em>IEEE Trans. on Automatic Control</em>, 2021. (under review, <a href="https://arxiv.org/abs/2109.06724">arXiv: 2109.06724</a>)</li>
+          <li>Lei Wang, Romeo Ortega, Alexey Bobtsov, Jose G. Romero and <u>Bowen Yi</u> Identiability implies robust, globally exponentially convergent on-line parameter estimation: Application to model reference adaptive control, submitted to <em>IEEE Trans. on Automatic Control</em>, 2021. (under review, <a href="https://arxiv.org/abs/2109.06724">arXiv: 2109.06724</a>)</li>
+          <li>Jose G. Romero, Isaac Gandarilla, Victor Santibanez and<u> Bowen Yi</u>, A constructive procedure for orbital stabilization of a class of underactuated mechanical systems, submitted to <em>IEEE Trans. on Control Systems Technology</em>, 2021. (under review)</li>
+          <li>Xiaodong Shao, Qinglei Hu, Daochun Li, Yang Shi and <u>Bowen Yi</u>, Composite adaptive control for anti-unwindng attitude maneuvers: An exponential stability result without persistent excitation, submitted to <em>IEEE Trans. on Control Systems and Technology,</em> 2021. (under review, <a href="https://arxiv.org/abs/2108.09901">arXiv: 2108.09901</a>)</li>
         </ol>
         <h3>Journal papers (published or accepted)</h3>
         <ol>
@@ -284,7 +285,7 @@
           <li>&nbsp;A frequency domain interpretation of signal injection
             methods for salient PMSMs
             <ul>
-              <li>, IEEE CCTA, Hong Kong, China, Aug
+              <li>IEEE CCTA, Hong Kong, China, Aug
                 2019          </li>
             </ul>
           </li>
