--- a/services.html
+++ b/services.html
@@ -119,39 +119,44 @@
       <section>
 
         <h2>Professional Services</h2>
-        <p class="social-row2">Reviewer for <em>Mathematical Reviews</em> (since 2020) - the American Mathemtical Society</p>
-        <p class="social-row2">Tutor, System Dynamics and Control (AMME3500, Semester 1 2020) - School of Aerospace, Mechanical and Mechatronic Engineering, The University of Sydney</p>
-        <p class="social-row2">Teaching Assistant, Advanced Process Control (Fall 2015) - Department of Automation, Shanghai Jiao Tong University</p>
-        <p class="social-row2">Journal Reviewers</p>
+        <p class="social-row2">- Teaching:</p>
+        <ul>
+          <li>Tutor (for Lab/Tutorial)
+            <ul>
+              <li>AMME 3500: Systems Dynamics and Control, USYD, Sydney, Australia, Semmester 1, 2020</li>
+              <li>AMME 3500: Systems Dynamics and Control, USYD, Sydney, Australia, Semmester 1, 2021</li>
+            </ul>
+          </li>
+          <li>Teaching Assistant
+            <ul>
+              <li>P032501: Advanced Process Control, SJTU, Shanghai, China, Fall 2015          </li>
+            </ul>
+          </li>
+        </ul>
+        <p class="social-row2">- Reviewer for Mathematical Reviews (since 2020, Number: 152427) - the American Mathematical Society</p>
+        <p class="social-row2">-  Review Editor (Control Theory) for Frontiers in Control Engineering        </p>
+        <p class="social-row2">- Journal Reviewers (more than 20 journals)</p>
         <ul>
           <li>Automatica</li>
           <li>Systems &amp; Control Letters</li>
           <li>European Journal of Control</li>
           <li>International Journal of Robust and Nonlinear Control</li>
-          <li>International Journal of Adaptive Control and Signal Processing</li>
-          <li>International Journal of Control</li>
-          <li>IEEE Transactions on Industrial Electronics</li>
-          <li>IEEE Transactions on Vehicular Technology</li>
-          <li>IEEE Transactions on Neural Networks and Learning Systems</li>
-          <li>IEEE/ASME Transactions on Mechatronics</li>
           <li>IEEE Robotics and Automation Letters</li>
           <li>IEEE Control Systems Letters</li>
-          <li>IEEE Transactions on System, Man and Cybernetics: Systems</li>
-          <li>Journal of Vibration and Control</li>
-          <li>Ocean Engineering</li>
-          <li>ISA Transactions</li>
-          <li>Neurocomputing</li>
-          <li>Aircraft Engineering and Aerospace Technology</li>
-          <li>Recent Patents and Mechanical Engineering</li>
+          <li>Scientifc Reports</li>
+          <li>IEEE Trans. on Automatic Control</li>
+          <li>IEEE Trans. on Control Systems Technology</li>
         </ul>
-        <p>Conference Reviewer</p>
+        <p>- Conference Reviewer</p>
         <ul>
-          <li>IEEE Conference on Decision and Control</li>
-          <li>American Control Conference</li>
-          <li>IEEE Conference on Control Technolgy and Application</li>
-          <li>Chinese Control Conference</li>
-          <li>IFAC World Congress</li>
-          <li>IFAC Symposium on Nonlinear Control Systems</li>
+          <li>IEEE Conference on Decision and Control （CDC'18-21)</li>
+          <li>IEEE Conference on Robotics and Automation (ICRA'19-20)</li>
+          <li>IEEE/RSJ Int. Conference on Intelligent Robots and Systems (21)</li>
+          <li>American Control Conference (ACC'19-21)</li>
+          <li>IEEE Conference on Control Technolgy and Application (CCTA'19-20)</li>
+          <li>Chinese Control Conference (CCC'16)</li>
+          <li>IFAC World Congress (IFAC WC'20)</li>
+          <li>IFAC Symposium on Nonlinear Control Systems (NOLCOS'19)</li>
         </ul>
         <p>&nbsp;</p>
         <p>&nbsp;</p>
