--- a/research.html
+++ b/research.html
@@ -120,6 +120,13 @@
 
         <h2>Research </h2>
         <p>&nbsp;</p>
+        <p>My research interests are maily about the algorithms of estimation, learning and control of nonlinear dynamical systems, with emphasis to robotics.</p>
+        <ul>
+          <li>Estimation (Observer design, apdaitve control)</li>
+          <li>Nonlinear control and application to electromechanical systems</li>
+          <li>System identification (Robust learning of dynamical systems)</li>
+          <li>Robotics (Pose estimation, mapping, orbital stabilization)</li>
+        </ul>
         <p>&nbsp;</p>
         <p>&nbsp;</p>
         <p>&nbsp;</p>
