--- a/publication.html
+++ b/publication.html
@@ -116,11 +116,6 @@
         <h3>Preprints and submissions</h3>
         <ol>
           <li><u>Bowen Yi</u>, and Ian R. Manchester, On the equivalence of contraction and Koopman approaches for nonlinear stability and control, submitted to <em>IEEE Trans. on Automatic Control</em>, 2021. (under review, <a href="https://arxiv.org/abs/2103.15033">arXiv: 2103.15033</a>)</li>
-          <li><u>Bowen Yi</u>, and Romeo Ortega, Conditions for convergence of dynamics
-            extension and mixing parameter estimator using LTI filters,
-            submitted to <em>IEEE Trans. on Automatic Control</em>, 2020. (under
-            review, <a href="https://arxiv.org/abs/2007.15224">arXiv:
-              2007.15224</a>)</li>
           <li>Alexey Bobtsov, <u>Bowen Yi</u>*, Romeo Ortega and Alessandro Astolfi, Generation of new exciting regressors for consistent on-line estimation of a scalar parameter, submitted to <em>IEEE Trans. on Automatic Control, </em>2021.
                 (under review, <a href="https://arxiv.org/abs/2104.02210">arXiv: 2104.02210</a>)</li>
           <li>Jose G. Romero and <u>Bowen Yi</u>*, Orbital stabilization of underactuated mechanical systems without 
@@ -149,6 +144,10 @@
             immersion and invariance technique, <em>International Journal of
               Robust and Nonlinear Control</em>, vol. 30, issue 5, pp.
           1850–1871, 2020.</li>
+          <li><u>Bowen Yi</u>, and Romeo Ortega, Conditions for convergence of dynamics
+            extension and mixing parameter estimator using LTI filters,
+            submitted to <em>IEEE Trans. on Automatic Control</em>, 2021. (conditionally accepted, <a href="https://arxiv.org/abs/2007.15224">arXiv:
+          2007.15224</a>)</li>
           <li><u>Bowen Yi</u>, Romeo Ortega, Dongjun Wu, and Weidong Zhang, Orbital
             stablization of nonlinear systems via Mexican sombrero energy
             shaping and pumping-and-damping injection, <em>Automatica, </em>vol.
