--- a/publication.html
+++ b/publication.html
@@ -116,6 +116,7 @@
         <h3>Preprints and submissions</h3>
         <ol>
           <li><u>Bowen Yi</u>, and Ian R. Manchester, On the equivalence of contraction and Koopman approaches for nonlinear stability and control, submitted to <em>IEEE Trans. on Automatic Control</em>, 2021. (under review, <a href="https://arxiv.org/abs/2103.15033">arXiv: 2103.15033</a>)</li>
+          <li><u>Bowen Yi</u>, Chi Jin, and Ian R. Manchester, Globally convergent visual-feature range estimation with biased inertial measurements, submitted to <em>Automatica</em>, 2021. (under review)</li>
           <li>Alexey Bobtsov, <u>Bowen Yi</u>*, Romeo Ortega and Alessandro Astolfi, Generation of new exciting regressors for consistent on-line estimation of a scalar parameter, submitted to <em>IEEE Trans. on Automatic Control, </em>2021.
                 (under review, <a href="https://arxiv.org/abs/2104.02210">arXiv: 2104.02210</a>)</li>
           <li>Jose G. Romero and <u>Bowen Yi</u>*, Orbital stabilization of underactuated mechanical systems without 
